--- a/TradeProAssistant.Data/packages.config
+++ b/TradeProAssistant.Data/packages.config
@@ -2,6 +2,14 @@
 <packages>
   <package id="CsvHelper" version="12.2.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net461" />
+  <package id="HtmlBuilders" version="2.0.5" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20505.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20505.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="RestSharp" version="106.10.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
