update connection string

--- a/TradeProAssistant.Tests/App.config
+++ b/TradeProAssistant.Tests/App.config
@@ -12,7 +12,7 @@
 
     </appSettings>
   <connectionStrings>
-    <add name="TradeProAssistant" connectionString="Data Source=dev-csandfort\master;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="TradeProAssistant" connectionString="Data Source=localhost\MASTER;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
