--- a/TradeProAssistant.Data/App.config
+++ b/TradeProAssistant.Data/App.config
@@ -7,7 +7,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="TradeProAssistant" connectionString="Data Source=dev-csandfort\master;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="TradeProAssistant" connectionString="Data Source=localhost\MASTER;Initial Catalog=TradeProAssistant;Persist Security Info=True;User ID=sa;Password=Se11W00d;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
