--- a/TradeProAssistant.Data/TradeProAssistant.Data.csproj
+++ b/TradeProAssistant.Data/TradeProAssistant.Data.csproj
@@ -388,6 +388,10 @@
     <Compile Include="Migrations\202001131944377_AddWeeklyIncomeEntities.designer.cs">
       <DependentUpon>202001131944377_AddWeeklyIncomeEntities.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001150030562_AdjustSpreadEntities.cs" />
+    <Compile Include="Migrations\202001150030562_AdjustSpreadEntities.designer.cs">
+      <DependentUpon>202001150030562_AdjustSpreadEntities.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\OpcGetOptionChainResponse.cs" />
     <Compile Include="Models\OpcGetStockPriceResponse.cs" />
@@ -486,6 +490,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202001131944377_AddWeeklyIncomeEntities.resx">
       <DependentUpon>202001131944377_AddWeeklyIncomeEntities.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001150030562_AdjustSpreadEntities.resx">
+      <DependentUpon>202001150030562_AdjustSpreadEntities.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SeedData\SP500_Constituents.csv" />
     <EmbeddedResource Include="SeedData\SPMidCap_Constituents.csv" />
