--- a/TradeProAssistant/Views/Web.config
+++ b/TradeProAssistant/Views/Web.config
@@ -21,6 +21,7 @@
         <add namespace="TradeProAssistant.Models"/>
         <add namespace="TradeProAssistant.Models"/>
         <add namespace="Entities.Dtos"/>
+        <add namespace="Enums"/>
         <add namespace="Kendo.Mvc.UI" />
         <add namespace="Data.Framework"/>
       </namespaces>
