--- a/TradeProAssistant/TradeProAssistant.csproj
+++ b/TradeProAssistant/TradeProAssistant.csproj
@@ -345,6 +345,7 @@
     <Content Include="Views\WeeklyIncome\ProgressLog.cshtml" />
     <Content Include="Views\WeeklyIncome\PlaySheet.cshtml" />
     <Content Include="Views\WeeklyIncome\_ActionPlanTable.cshtml" />
+    <Content Include="src\components\WeeklyIncomeSettings.vue" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
