--- a/TradeProAssistant.Data/TradeProAssistant.Data.csproj
+++ b/TradeProAssistant.Data/TradeProAssistant.Data.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Entities\Dtos\SecurityDto.cs">
       <DependentUpon>EntityDto.txt4</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Dtos\SimpleWeeklyIncomePlaySheetDto.cs" />
     <Compile Include="Entities\Dtos\WeekCandlestickDto.cs">
       <DependentUpon>EntityDto.txt4</DependentUpon>
     </Compile>
@@ -387,6 +388,14 @@
     <Compile Include="Migrations\202001162207209_Fresh.designer.cs">
       <DependentUpon>202001162207209_Fresh.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001211926142_AddIgnoreProperty.cs" />
+    <Compile Include="Migrations\202001211926142_AddIgnoreProperty.designer.cs">
+      <DependentUpon>202001211926142_AddIgnoreProperty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202001212145150_AddBullishBearishProperties.cs" />
+    <Compile Include="Migrations\202001212145150_AddBullishBearishProperties.designer.cs">
+      <DependentUpon>202001212145150_AddBullishBearishProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\OpcGetOptionChainResponse.cs" />
     <Compile Include="Models\OpcGetStockPriceResponse.cs" />
@@ -466,6 +475,12 @@
     <None Include="packages.config" />
     <EmbeddedResource Include="Migrations\202001162207209_Fresh.resx">
       <DependentUpon>202001162207209_Fresh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001211926142_AddIgnoreProperty.resx">
+      <DependentUpon>202001211926142_AddIgnoreProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001212145150_AddBullishBearishProperties.resx">
+      <DependentUpon>202001212145150_AddBullishBearishProperties.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SeedData\SP500_Constituents.csv" />
     <EmbeddedResource Include="SeedData\SPMidCap_Constituents.csv" />
