--- a/TradeProAssistant/Views/Web.config
+++ b/TradeProAssistant/Views/Web.config
@@ -20,6 +20,7 @@
         <add namespace="TradeProAssistant" />
         <add namespace="TradeProAssistant.Models"/>
         <add namespace="TradeProAssistant.Models"/>
+        <add namespace="TradeProAssistant.Data.Models"/>
         <add namespace="Entities.Dtos"/>
         <add namespace="Enums"/>
         <add namespace="Kendo.Mvc.UI" />
