--- a/TradeProAssistant/package.json
+++ b/TradeProAssistant/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "accounting-js": "^1.1.1",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
