--- a/TradeProAssistant.Data/TradeProAssistant.Data.csproj
+++ b/TradeProAssistant.Data/TradeProAssistant.Data.csproj
@@ -277,10 +277,10 @@
     <Compile Include="Entities\Enums\AssetClasses.cs">
       <DependentUpon>Enum.txt4</DependentUpon>
     </Compile>
-    <Compile Include="Entities\Enums\CondorTypes.cs">
+    <Compile Include="Entities\Enums\Sectors.cs">
       <DependentUpon>Enum.txt4</DependentUpon>
     </Compile>
-    <Compile Include="Entities\Enums\Sectors.cs">
+    <Compile Include="Entities\Enums\StrategyTypes.cs">
       <DependentUpon>Enum.txt4</DependentUpon>
     </Compile>
     <Compile Include="Entities\Enums\WeeklyActionPlanGenerationMethods.cs">
@@ -399,6 +399,14 @@
     <Compile Include="Migrations\202002041701243_IronCondorFields.designer.cs">
       <DependentUpon>202002041701243_IronCondorFields.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002042237104_AddStrategyType.cs" />
+    <Compile Include="Migrations\202002042237104_AddStrategyType.designer.cs">
+      <DependentUpon>202002042237104_AddStrategyType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002042344443_Test.cs" />
+    <Compile Include="Migrations\202002042344443_Test.designer.cs">
+      <DependentUpon>202002042344443_Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BenzingaNewsResponse.cs" />
     <Compile Include="Models\OpcGetOptionChainResponse.cs" />
@@ -485,6 +493,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002041701243_IronCondorFields.resx">
       <DependentUpon>202002041701243_IronCondorFields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002042237104_AddStrategyType.resx">
+      <DependentUpon>202002042237104_AddStrategyType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002042344443_Test.resx">
+      <DependentUpon>202002042344443_Test.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SeedData\SP500_Constituents.csv" />
     <EmbeddedResource Include="SeedData\SPMidCap_Constituents.csv" />
